compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_long_lived_actor_many_messages.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/long_lived_actor_many_messages.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
one
two
three
four
five
stderr:
<empty>
