compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_monitor_idle_actor_down.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/monitor_idle_actor_down.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
1
stderr:
<empty>
