compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_preemptive_round_robin.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/preemptive_round_robin.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
a1
b1
a2
b2
a3
b3
stderr:
<empty>
