compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_receive_generic_payload_capture.snap
---
source: tests/fixtures.rs
assertion_line: 2164
expression: transcript
---
fixture: tests/fixtures/programs/actors/receive_generic_payload_capture.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
42
stderr:
<empty>
