compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_receive_tuple_pattern.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/receive_tuple_pattern.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
42
stderr:
<empty>
