compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_receive_unit_pattern.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/receive_unit_pattern.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
unit
skip
stderr:
<empty>
