compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_spawn_chain_forward.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/spawn_chain_forward.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
through child
stderr:
<empty>
